--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "dotenv": "^9.0.0",
     "express": "^4.16.3",
+    "logger": "0.0.1",
     "mongoose": "^5.3.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node": "^16.1.0"
   }
 }
